Minor layout changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ google-maps/public/fountain3_med.psd
 google-maps/public/fountain_large.png
 google-maps/public/old-favicon.png
 google-maps/public/favicon_blue.png
+google-maps/FountCouver.desktop
+google-maps/Link to Digital-Thor-FountCouver on GitHub.desktop
